Inital set up files