@@ -1,6 +1,11 @@
 # mandleBrot
+
 My attempt at a Mendle Brot set generator.
 
+### How to run
 
-### Notes
-06.12.2023 - Attempted this project using a library from the 2004 Colorado University staff but was unsuccessful, trying a different approach. 
+```bash
+export PATH_TO_FX=javafx-sdk-21.0.1/lib
+javac --module-path $PATH_TO_FX --add-modules javafx.controls App.java
+java --module-path $PATH_TO_FX --add-modules javafx.controls Mandle 
+```
